--- a/app/src/main/res/layout/activity_reset_password_done.xml
+++ b/app/src/main/res/layout/activity_reset_password_done.xml
@@ -10,4 +10,37 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.deepa.ufsocial.ResetPasswordDone">
 
+    <TextView
+        android:text="Reset Password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textViewResetPasswordDoneMainTitle"
+        android:textSize="20sp"
+        android:textColor="@color/colorMainTitle"/>
+
+    <TextView
+        android:text="Your password has been reset. Continue to Sign In."
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewResetPasswordDoneMainTitle"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp"
+        android:id="@+id/textViewResetPasswordDoneMainDescription" />
+
+    <Button
+        android:text="Continue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonResetPasswordDoneContinue"
+        android:textAllCaps="false"
+        android:layout_below="@+id/textViewResetPasswordDoneMainDescription"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="@color/colorButtonText"
+        android:background="@color/colorButtonBackground"/>
 </RelativeLayout>
