--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -10,4 +10,59 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.deepa.ufsocial.ForgetPassword">
 
+    <TextView
+        android:text="Forget Password"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textViewForgetPasswordMainTitle"
+        android:textSize="20sp"
+        android:textColor="@color/colorMainTitle"/>
+
+    <TextView
+        android:text="Enter your email to reset password."
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewForgetPasswordMainTitle"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp"
+        android:id="@+id/textViewForgetPasswordMainDescription" />
+
+    <EditText
+        android:hint="Email"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:ems="10"
+        android:layout_marginTop="5dp"
+        android:id="@+id/editTextForgetPasswordEmail"
+        android:layout_below="@+id/textViewForgetPasswordMainDescription"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Error Message"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editTextForgetPasswordEmail"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textViewForgetPasswordErrorMessage"
+        android:textColor="@color/colorErrorMessage"/>
+
+    <Button
+        android:text="Next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonForgetPasswordNext"
+        android:textAllCaps="false"
+        android:layout_below="@+id/textViewForgetPasswordErrorMessage"
+        android:layout_marginTop="5dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="@color/colorButtonText"
+        android:background="@color/colorButtonBackground"/>
 </RelativeLayout>
