--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -9,7 +9,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.deepa.ufsocial.Landing">
+    tools:context="com.example.deepa.ufsocial.Landing"
+    android:background="#FFFFFF">
 
     <ImageView
         android:layout_width="fill_parent"
