--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,9 @@
     <color name="colorButtonText">#FFFFFF</color>
     <color name="colorButtonBackground">@color/colorUFBlue</color>
     <color name="colorTextLink">#4477FF</color>
+    <color name="medium_grey">#9E9E9E</color>
+    <color name="dark_grey">#424242</color>
+    <color name="white">#FFFFFF</color>
+    <color name="button_grey">#757575</color>
+
 </resources>
