A lot of things done

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -69,7 +69,7 @@
         android:background="@color/colorButtonBackground"/>
 
     <Button
-        android:text="Sing In"
+        android:text="Sign In"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonSignInSignIn"
