editing my profile page

--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -4,46 +4,26 @@
     android:layout_height="match_parent"
     tools:context="com.example.deepa.ufsocial.MyProfile">
 
-    <TextView
+    <CheckBox
+        android:text="Cryptology"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Profile Page"
-        android:id="@+id/textView"/>
-
-    <Spinner
-        android:id="@+id/spinner1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:entries="@array/interest_array"
-        android:prompt="@string/interest_prompt"
-        android:layout_marginTop="180dp"
-        android:layout_below="@id/textView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <EditText
-        android:hint="Min number of times paths should cross"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/editCrossPathNumber"
-        android:layout_below="@id/spinner1"
+        android:id="@+id/checkBox5"
+        android:layout_below="@+id/checkBox4"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="39dp" />
+        android:layout_alignParentStart="true" />
+
 
     <EditText
-        android:hint="Min number of common interests"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
         android:id="@+id/editMinCommonInterest"
-        android:layout_below="@+id/editCrossPathNumber"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="220dp"
+        android:text="1"
+        android:layout_toRightOf="@+id/checkBox8"
+        android:layout_toEndOf="@+id/checkBox8" />
 
     <Spinner
         android:id="@+id/spinner2"
@@ -53,19 +33,105 @@
         android:prompt="@string/education_level_prompt"
         android:layout_marginTop="21dp"
         android:layout_below="@+id/editMinCommonInterest"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_alignStart="@+id/textView2" />
+
+    <CheckBox
+        android:text="Advanced Databases"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox"
+        android:layout_below="@+id/checkBox2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Button
-        android:text="Submit"
+    <CheckBox
+        android:text="Computer Graphics"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
-        android:id="@+id/buttonMyProfile"
-        android:textAllCaps="false"
-        android:textColor="@color/colorButtonText"
-        android:background="@color/colorButtonBackground"
-        android:layout_below="@+id/spinner2"
+        android:id="@+id/checkBox4"
+        android:layout_below="@+id/checkBox"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <CheckBox
+        android:text="Data Mining"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox6"
+        android:layout_below="@+id/checkBox5"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <CheckBox
+        android:text="Mobile Computing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox7"
+        android:layout_above="@+id/checkBox"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="34dp"
+        android:layout_marginEnd="34dp" />
+
+    <CheckBox
+        android:text="Networking"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox8"
+        android:layout_below="@+id/checkBox7"
+        android:layout_alignLeft="@+id/checkBox7"
+        android:layout_alignStart="@+id/checkBox7" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox9"
+        android:layout_below="@+id/checkBox8"
+        android:layout_alignLeft="@+id/checkBox8"
+        android:layout_alignStart="@+id/checkBox8"
+        android:text="Analysis of Algorithms" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox3"
+        android:text="Computer Vision"
+        android:layout_below="@+id/checkBox9"
+        android:layout_alignLeft="@+id/checkBox9"
+        android:layout_alignStart="@+id/checkBox9" />
+
+    <CheckBox
+        android:text="Machine Learning"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox2"
+        android:layout_marginTop="53dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Interests:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView5"
+        android:textSize="30sp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="11dp" />
+
+    <TextView
+        android:text="Minimum # of Common Interests"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:textSize="18sp"
+        android:textAlignment="center"
+        android:layout_alignBaseline="@+id/editMinCommonInterest"
+        android:layout_alignBottom="@+id/editMinCommonInterest"
+        android:layout_alignLeft="@+id/textView5"
+        android:layout_alignStart="@+id/textView5" />
+
 </RelativeLayout>
